style(component): delete button

--- a/gym/frontend/src/components/general/card/Card.module.css
+++ b/gym/frontend/src/components/general/card/Card.module.css
@@ -3,7 +3,7 @@
   width: 98%;
   height: 150px;
   display: block;
-  color: #fff;
+  color: #d8cdb9;
 
   background: rgba(31, 33, 36, 0.5);
   /* background:linear-gradient(135deg, #aa084c 0%,#181113 100%); */
