--- a/gym/frontend/src/components/general/footer/Footer.module.css
+++ b/gym/frontend/src/components/general/footer/Footer.module.css
@@ -2,7 +2,8 @@
   bottom: 0;
   position: relative;
   width: 100%;
-  background-color: #fff;
+  background-color: #1f2124;
+  color: #d8cdb9;
   height: 100%;
   display: flex;
   align-items: center;
