--- a/gym/frontend/src/components/general/navbar/Navbar.module.css
+++ b/gym/frontend/src/components/general/navbar/Navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  background-color: #fff;
+  background-color: #1f2124;
 }
 
 .ul {
@@ -13,11 +13,17 @@
 .li {
   list-style-type: none;
   margin: 0 10px;
-  color: #000;
+}
+
+.li:hover {
+  color: #c28c2e !important;
 }
 
 .ul a {
   text-decoration: none;
+  align-items: center;
+  display: flex;
+  margin-right: 10px;
 }
 
 .logo {
@@ -25,4 +31,5 @@
   align-items: center;
   margin-left: 20px !important;
   width: 75px !important;
+  color: #d8cdb9;
 }
