--- a/gym/app/frontend/src/assets/style/index.css
+++ b/gym/app/frontend/src/assets/style/index.css
@@ -24,3 +24,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (min-width: 400px) {
+  body {
+    font-size: 70%;
+  }
+};
+@media only screen and (min-width: 800px) {
+  body {
+    font-size: 75%;
+  }
+};
+@media only screen and (min-width: 1000px) {
+  body {
+    font-size: 90%;
+  }
+};
+@media only screen and (min-width: 1200px) {
+  body {
+    font-size: 100% ;
+  }
+};
