style(frontend): refactor and change style

--- a/gym/app/frontend/src/components/general/input/Input.module.css
+++ b/gym/app/frontend/src/components/general/input/Input.module.css
@@ -3,11 +3,11 @@
 }
 
 .datetimePicker {
-  color: #000 !important;
+  color: #000;
 }
 
 .datetimePicker tr td, tr th, span {
-  color: #000 !important;
+  color: #000;
 }
 
 .formItem {
