--- a/gym/app/frontend/src/assets/style/index.css
+++ b/gym/app/frontend/src/assets/style/index.css
@@ -1,49 +1,53 @@
 :root {
-  --vintageEphemera: #d8cdb9;
-  --coalBlack: #222220;
-  --gothicGold: #c28c2e;
-  --redBerry: #721b29;
-  --primary: #043353;
+    --vintageEphemera: #d8cdb9;
+    --coalBlack: #222220;
+    --gothicGold: #c28c2e;
+    --redBerry: #721b29;
+    --primary: #043353;
+    --outlineColor: dodgerblue;
 }
 
 * {
-  font-family: "JetBrains Mono",monospace;
-  color: var(--vintageEphemera);
+    font-family: "JetBrains Mono", monospace;
+    color: var(--vintageEphemera);
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
 
 @media only screen and (min-width: 400px) {
-  html {
-    font-size: 1rem;
-  }
+    html {
+        font-size: 1rem;
+    }
 }
+
 @media only screen and (min-width: 800px) {
-  html {
-    font-size: 1.1rem;
-  }
+    html {
+        font-size: 1.1rem;
+    }
 }
+
 @media only screen and (min-width: 1000px) {
-  html {
-    font-size: 1.2rem;
-  }
+    html {
+        font-size: 1.2rem;
+    }
 }
+
 @media only screen and (min-width: 1200px) {
-  html {
-    font-size: 1.3rem;
-  }
+    html {
+        font-size: 1.3rem;
+    }
 }
 
 button,
@@ -51,11 +55,44 @@ input[type="button"],
 input[type="submit"],
 input[type="reset"],
 input[type="tel"] {
-  font-size: inherit; /* Inherit font size from parent */
+    font-size: inherit;
+    /* Inherit font size from parent */
 }
 
 input[type="text"],
 input[type="password"],
 textarea {
-  font-size: inherit; /* Inherit font size from parent */
+    font-size: inherit;
+    /* Inherit font size from parent */
+}
+
+input {
+    padding: 0.75rem 4rem 0.75rem 0.75rem;
+    width: 100%;
+    border: 2px solid transparent;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow:
+        inset 0 0 0 2px black,
+        inset 6px 6px 0 rgba(30, 144, 255, 0.2),
+        3px 3px 0 rgba(30, 144, 255, 0.2);
+
+    -webkit-appearance: none;
+
+    &:focus {
+        outline-offset: 1px;
+    }
+}
+
+label,
+input,
+.button {
+    &:focus {
+        outline: 3px solid var(--outlineColor);
+        outline-offset: 2px;
+    }
+
+    &::-moz-focus-inner {
+        border: none;
+    }
 }
