--- a/gym/app/frontend/src/components/general/input/genderPicker/GenderPicker.module.css
+++ b/gym/app/frontend/src/components/general/input/genderPicker/GenderPicker.module.css
@@ -5,7 +5,7 @@
     width: 60%;
 }
 
-input[name="sex"] {
+input[name="gender"] {
     margin-top: 0.5rem;
     -webkit-appearance: none;
     -moz-appearance: none;
