--- a/gym/app/frontend/src/assets/style/index.css
+++ b/gym/app/frontend/src/assets/style/index.css
@@ -98,3 +98,9 @@ textarea,
         border: none;
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
