--- a/gym/app/frontend/src/layout/MainLayout/Layout.module.css
+++ b/gym/app/frontend/src/layout/MainLayout/Layout.module.css
@@ -1,12 +1,19 @@
 .content {
   height: 95%;
-  background-color: #383a40;
+  background-color: #35373d;
 }
 
 .parent {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #35373d;
+  position: relative;
 }
 
 .footer {
-  height: 5%;
+  background-color: #35373d;
+  height: 30px;
+  bottom: 0;
+  position: absolute;
+  width: 100%;
 }
