--- a/gym/app/frontend/src/components/general/card/CardProduct.module.css
+++ b/gym/app/frontend/src/components/general/card/CardProduct.module.css
@@ -50,7 +50,7 @@
 
   .buttonContainer {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     position: relative;
   }
 
